t_role 添加字段