@@ -1,5 +1,7 @@
 package com.slin.authority.utils;
 
+import org.apache.commons.codec.binary.Base64;
+
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -35,7 +37,7 @@ public class ZipUtils {
         }
 
 
-        return new sun.misc.BASE64Encoder().encode(out.toByteArray());
+        return Base64.encodeBase64String(out.toByteArray());
     }
 
     /**
@@ -55,7 +57,7 @@ public class ZipUtils {
         byte[] compressed=null;
         String decompressed = null;
         try {
-            compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+            compressed = Base64.decodeBase64(compressedStr);
             in=new ByteArrayInputStream(compressed);
             ginzip=new GZIPInputStream(in);
 
@@ -110,7 +112,7 @@ public class ZipUtils {
             zout.write(str.getBytes());
             zout.closeEntry();
             compressed = out.toByteArray();
-            compressedStr = new sun.misc.BASE64Encoder().encodeBuffer(compressed);
+            compressedStr =Base64.encodeBase64String(compressed);
         } catch (IOException e) {
             compressed = null;
         } finally {
@@ -145,7 +147,7 @@ public class ZipUtils {
         ZipInputStream zin = null;
         String decompressed = null;
         try {
-            byte[] compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+            byte[] compressed = Base64.decodeBase64(compressedStr);
             out = new ByteArrayOutputStream();
             in = new ByteArrayInputStream(compressed);
             zin = new ZipInputStream(in);
